# llm-rpg

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: game_config.yaml
scripts/: download_sprites.py  test_api_key.py
src/llm_rpg/: __main__.py
src/llm_rpg/game/: game_config.py
src/llm_rpg/llm/: llm.py
src/llm_rpg/scenes/battle/: battle_scene.py
src/llm_rpg/scenes/battle/battle_states/: battle_enemy_thinking_state.py  battle_hero_thinking_state.py
src/llm_rpg/sprite_generator/: sprite_generator.py
src/llm_rpg/systems/battle/: action_judges.py  action_narrators.py  battle_ai.py  enemy_action_generators.py  player_action_generators.py
src/llm_rpg/systems/generation/: enemy_generator.py
